# quickjspp

./: .gitmodules  CMakeLists.txt  classqjs_1_1Context.html  classqjs_1_1Context_1_1Module.html  classqjs_1_1Context_1_1Module_1_1class__registrar.html  classqjs_1_1Runtime.html  classqjs_1_1Value.html  qjs_8cpp.html  qjs_8cpp_source.html  quickjs_8h.html  quickjspp.hpp  quickjspp_8hpp_source.html  structqjs_1_1detail_1_1function.html  structqjs_1_1js__property__traits_3_01const_01char_01_5_01_4.html  structqjs_1_1js__property__traits_3_01uint32__t_01_4.html  structqjs_1_1js__traits_3_01T_01_5_00_01std_1_1enable__if__t_3_01std_1_1is__class__v_3_01T_01_4_01_4_01_4.html  structqjs_1_1js__traits_3_01Value_01_4.html  structqjs_1_1js__traits_3_01detail_1_1function_01_4.html  structqjs_1_1js__traits_3_01std_1_1function_3_01R_07Args_8_8_8_08_4_01_4.html  structqjs_1_1js__traits_3_01std_1_1optional_3_01T_01_4_01_4.html  structqjs_1_1js__traits_3_01std_1_1pair_3_01U_00_01V_01_4_01_4.html  structqjs_1_1js__traits_3_01std_1_1shared__ptr_3_01T_01_4_01_4.html  structqjs_1_1js__traits_3_01std_1_1vector_3_01T_01_4_01_4.html
.github/workflows/: cxx.yml  doxygen.yml  quickjsdll.yml  valgrind.yml
quickjs/: CMakeLists.txt  quickjs.c  quickjs.h
test/: CMakeLists.txt  class.cpp
